# opnsense-confgen

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
src/oscg/: cli.py  core.py  example.py  utils.py
src/oscg/templates/: apikey.xml  config.xml  config_template.xml  fw_admin_template.xml  fw_wg.xml  opt_dhcp.xml  opt_if_template.xml  wg_conf.xml  wg_grp_template.xml  wg_if_template.xml
tests/: test_cli.py  test_core.py  test_example.py  test_linters.py  test_utils.py
tests/data/: config_xml_dyn_cpub.re  config_xml_dyn_cpub_with_decl.re  config_xml_dyn_keys_with_decl.re  config_xml_dyn_spriv_with_decl.re  config_xml_no_apikey.re  config_xml_no_opt_dhcp.re  config_xml_no_wg.re  config_xml_stat_keys.re  config_xml_stat_keys_with_decl.re  ini_example.txt  ini_full.txt  ini_no_cpub.txt  ini_no_keys.txt  ini_no_wg.txt  ini_opnsense_config_example.txt  ini_opnsense_config_no_spriv.txt  url_console_output.txt  wg_client_config_fqdn.re  wg_client_config_fqdn_server_dynamic.re  wg_client_config_ip.re
tests/data/sections/: gw.xml  gw_far.xml  lan_dhcp.xml  lan_if.xml  opt_dhcp.xml  opt_if.xml  plugin.xml  revision.re  system.xml  system_no_domain.xml  system_no_host.xml  system_no_host_domain.xml  user.xml  wan_if.xml  wg_fw.xml  wg_if.xml  wg_settings.re
