[metadata]
name = opnsense-confgen
version = 2.1.0
author = Malwarology LLC
description = Generate OPNsense configuration XML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/malwarology/opnsense-confgen
project_urls =
    Bug Tracker = https://github.com/malwarology/opnsense-confgen/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Security
    Topic :: System :: Networking :: Firewalls
    Topic :: System :: Systems Administration
    Topic :: Text Processing :: Markup :: XML
    Topic :: Utilities

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    pynacl
    pycdlib
python_requires = >= 3.10.5

[options.package_data]
oscg = templates/*.xml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    oscg = oscg.cli:main

[pycodestyle]
max-line-length = 120

[pydocstyle]
ignore = D104,D107,D203,D213

[coverage:run]
branch = True
source = src
